--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -602,113 +602,114 @@ Add fancy modeline, because why not.
 #+end_src
 ** dired-hacks
 #+begin_src emacs-lisp
-  (defun grym-dired-filter-group-mode-off ()
-    (interactive)
-    (dired-filter-group-mode -1))
-  (defun grym-dired-filter-group-mode-on ()
-    (interactive)
-    (dired-filter-group-mode 1))
+    (defun grym-dired-filter-group-mode-off ()
+      (interactive)
+      (dired-filter-group-mode -1))
+    (defun grym-dired-filter-group-mode-on ()
+      (interactive)
+      (dired-filter-group-mode 1))
 
-  (use-package dired-hacks-utils)
-  (use-package dired-open
-    :bind (:map dired-mode-map
-                ("O" . dired-open-xdg)))
+    (use-package dired-hacks-utils)
+    (use-package dired-open
+      :bind (:map dired-mode-map
+                  ("O" . dired-open-xdg)))
 
-  (use-package dired-subtree
+    (use-package dired-subtree
+      :after dired
+      :bind (:map dired-mode-map
+                  ("i" . dired-subtree-insert)
+                  (";" . dired-subtree-remove))
+      )
+
+    (use-package dired-filter
+      :after    dired
+      :bind (:map dired-mode-map
+                  ("/" . dired-filter-map)
+                  ("f" . grym-dired-filter-group-mode-off)
+                  ("h" . dired-filter-by-dot-files)
+  ;;                ("H" . dired-filter-pop-all)
+                  )
+      :hook ((dired-mode . dired-filter-mode)
+             (dired-mode . dired-filter-group-mode)
+             )
+      :init (setq dired-filter-revert 'never
+                  dired-filter-group-saved-groups
+                  '(("default"
+                     ("Git"
+                      (directory . ".git")
+                      (file . ".gitignore")
+                      (file . ".gitattributes"))
+                     ("Directory"
+                      (directory))
+                     ("PDF"
+                      (extension . "pdf"))
+                     ("LaTeX"
+                      (extension "tex" "bib" "cls" "sty"))
+                     ("Source"
+                      (extension "c" "cpp" "hs" "rb" "m" "r" "cs" "el" "lisp" "html" "js" "css"))
+                     ("Python"
+                      (extension "py" "pyx" "pyc" "whl" "ipynb"))
+                     ("Documents"
+                      (extension "md" "rst" "txt" "docx" "pptx" "xlsx"))
+                     ("Text Data"
+                      (extension "yaml" "toml" "cfg" "json"))
+                     ("Packages"
+                      (extension "deb" "rpm" "dmg" "iso"))
+                     ("Org"
+                      (extension . "org"))
+                     ("Archives"
+                      (extension "zip" "rar" "gz" "bz2" "tar"))
+                     ("Videos"
+                      (extension "mp4" "webm" "mkv" "mov" "avi"))
+                     ("Audio"
+                      (extension "m4a" "aac" "wav" "mp3" "ogg"))
+                     ("Images"
+                      (extension "jpg" "JPG" "webp" "png" "PNG" "jpeg" "JPEG" "bmp" "BMP" "TIFF" "tiff" "gif" "GIF" "svg"))))))
+
+
+    (when (executable-find "avfsd")
+      (use-package dired-avfs))
+
+    (use-package dired-rainbow
+      :after dired
+      :config
+      (dired-rainbow-define-chmod directory "#6cb2eb" "d.*")
+      (dired-rainbow-define html        "#eb5286" ("css" "less" "sass" "scss" "htm" "html" "jhtm" "mht" "eml" "mustache" "xhtml"))
+      (dired-rainbow-define xml         "#f2d024" ("xml" "xsd" "xsl" "xslt" "wsdl" "bib" "json" "msg" "pgn" "rss" "yaml" "yml" "rdata"))
+      (dired-rainbow-define document    "#9561e2" ("docm" "doc" "docx" "odb" "odt" "pdb" "pdf" "ps" "rtf" "djvu" "epub" "odp" "ppt" "pptx"))
+      (dired-rainbow-define markdown    "#ffed4a" ("org" "etx" "info" "markdown" "md" "mkd" "nfo" "pod" "rst" "tex" "textfile" "txt"))
+      (dired-rainbow-define database    "#6574cd" ("xlsx" "xls" "csv" "accdb" "db" "mdb" "sqlite" "nc"))
+      (dired-rainbow-define media       "#de751f" ("mp3" "mp4" "MP3" "MP4" "avi" "mpeg" "mpg" "flv" "ogg" "mov" "mid" "midi" "wav" "aiff" "flac" "webm" "mkv" "m4a"))
+      (dired-rainbow-define image       "#f66d9b" ("tiff" "tif" "cdr" "gif" "ico" "jpeg" "jpg" "png" "psd" "eps" "svg" "webp"))
+      (dired-rainbow-define log         "#c17d11" ("log"))
+      (dired-rainbow-define shell       "#f6993f" ("awk" "bash" "bat" "sed" "sh" "zsh" "vim"))
+      (dired-rainbow-define interpreted "#38c172" ("py" "ipynb" "rb" "pl" "t" "msql" "mysql" "pgsql" "sql" "r" "clj" "cljs" "scala" "js"))
+      (dired-rainbow-define compiled    "#4dc0b5" ("asm" "cl" "lisp" "el" "c" "h" "c++" "h++" "hpp" "hxx" "m" "cc" "cs" "cp" "cpp" "go" "f" "for" "ftn" "f90" "f95" "f03" "f08" "s" "rs" "hi" "hs" "pyc" ".java"))
+      (dired-rainbow-define executable  "#8cc4ff" ("exe" "msi"))
+      (dired-rainbow-define compressed  "#51d88a" ("7z" "zip" "bz2" "tgz" "txz" "gz" "xz" "z" "Z" "jar" "war" "ear" "rar" "sar" "xpi" "apk" "xz" "tar" "whl" "pt" "pth"))
+      (dired-rainbow-define packaged    "#faad63" ("deb" "rpm" "apk" "jad" "jar" "cab" "pak" "pk3" "vdf" "vpk" "bsp"))
+      (dired-rainbow-define encrypted   "#ffed4a" ("gpg" "pgp" "asc" "bfe" "enc" "signature" "sig" "p12" "pem"))
+      (dired-rainbow-define fonts       "#6cb2eb" ("afm" "fon" "fnt" "pfb" "pfm" "ttf" "otf"))
+      (dired-rainbow-define partition   "#e3342f" ("dmg" "iso" "bin" "nrg" "qcow" "toast" "vcd" "vmdk" "bak"))
+      (dired-rainbow-define vc          "#0074d9" ("git" "gitignore" "gitattributes" "gitmodules"))
+      (dired-rainbow-define-chmod executable-unix "#38c172" "-.*x.*"))
+
+    (use-package dired-narrow
+      :after    dired
+      :bind (:map dired-mode-map
+                  ("\\" . dired-narrow)
+                  ("<down>"  . dired-narrow-next-file)
+                  ("<up>"    . dired-narrow-previous-file)
+                  ("<right>" . dired-narrow-enter-directory)))
+    (use-package dired-collapse
+      :hook 'dired-mode-hook)
+    ;;preview files in dired
+    (use-package peep-dired
     :after dired
-    :bind (:map dired-mode-map
-                ("i" . dired-subtree-insert)
-                (";" . dired-subtree-remove))
-    )
-
-  (use-package dired-filter
-    :after    dired
-    :bind (:map dired-mode-map
-                ("/" . dired-filter-map)
-                ("f" . grym-dired-filter-group-mode-off)
-                ("h" . dired-filter-by-dot-files)
-                ("H" . dired-filter-pop-all)
-                )
-    :hook ((dired-mode . dired-filter-mode)
-           (dired-mode . dired-filter-group-mode)
-           )
-    :init (setq dired-filter-revert 'never
-                dired-filter-group-saved-groups
-                '(("default"
-                   ("Git"
-                    (directory . ".git")
-                    (file . ".gitignore")
-                    (file . ".gitattributes"))
-                   ("Directory"
-                    (directory))
-                   ("PDF"
-                    (extension . "pdf"))
-                   ("LaTeX"
-                    (extension "tex" "bib" "cls" "sty"))
-                   ("Source"
-                    (extension "c" "cpp" "hs" "rb" "m" "r" "cs" "el" "lisp" "html" "js" "css"))
-                   ("Python"
-                    (extension "py" "pyx" "pyc" "whl" "ipynb"))
-                   ("Documents"
-                    (extension "md" "rst" "txt" "docx" "pptx" "xlsx"))
-                   ("Text Data"
-                    (extension "yaml" "toml" "cfg" "json"))
-                   ("Packages"
-                    (extension "deb" "rpm" "dmg" "iso"))
-                   ("Org"
-                    (extension . "org"))
-                   ("Archives"
-                    (extension "zip" "rar" "gz" "bz2" "tar"))
-                   ("Videos"
-                    (extension "mp4" "webm" "mkv" "mov" "avi"))
-                   ("Audio"
-                    (extension "m4a" "aac" "wav" "mp3" "ogg"))
-                   ("Images"
-                    (extension "jpg" "JPG" "webp" "png" "PNG" "jpeg" "JPEG" "bmp" "BMP" "TIFF" "tiff" "gif" "GIF" "svg"))))))
-
-  (when (executable-find "avfsd")
-    (use-package dired-avfs))
-
-  (use-package dired-rainbow
-    :after dired
-    :config
-    (dired-rainbow-define-chmod directory "#6cb2eb" "d.*")
-    (dired-rainbow-define html        "#eb5286" ("css" "less" "sass" "scss" "htm" "html" "jhtm" "mht" "eml" "mustache" "xhtml"))
-    (dired-rainbow-define xml         "#f2d024" ("xml" "xsd" "xsl" "xslt" "wsdl" "bib" "json" "msg" "pgn" "rss" "yaml" "yml" "rdata"))
-    (dired-rainbow-define document    "#9561e2" ("docm" "doc" "docx" "odb" "odt" "pdb" "pdf" "ps" "rtf" "djvu" "epub" "odp" "ppt" "pptx"))
-    (dired-rainbow-define markdown    "#ffed4a" ("org" "etx" "info" "markdown" "md" "mkd" "nfo" "pod" "rst" "tex" "textfile" "txt"))
-    (dired-rainbow-define database    "#6574cd" ("xlsx" "xls" "csv" "accdb" "db" "mdb" "sqlite" "nc"))
-    (dired-rainbow-define media       "#de751f" ("mp3" "mp4" "MP3" "MP4" "avi" "mpeg" "mpg" "flv" "ogg" "mov" "mid" "midi" "wav" "aiff" "flac" "webm" "mkv" "m4a"))
-    (dired-rainbow-define image       "#f66d9b" ("tiff" "tif" "cdr" "gif" "ico" "jpeg" "jpg" "png" "psd" "eps" "svg" "webp"))
-    (dired-rainbow-define log         "#c17d11" ("log"))
-    (dired-rainbow-define shell       "#f6993f" ("awk" "bash" "bat" "sed" "sh" "zsh" "vim"))
-    (dired-rainbow-define interpreted "#38c172" ("py" "ipynb" "rb" "pl" "t" "msql" "mysql" "pgsql" "sql" "r" "clj" "cljs" "scala" "js"))
-    (dired-rainbow-define compiled    "#4dc0b5" ("asm" "cl" "lisp" "el" "c" "h" "c++" "h++" "hpp" "hxx" "m" "cc" "cs" "cp" "cpp" "go" "f" "for" "ftn" "f90" "f95" "f03" "f08" "s" "rs" "hi" "hs" "pyc" ".java"))
-    (dired-rainbow-define executable  "#8cc4ff" ("exe" "msi"))
-    (dired-rainbow-define compressed  "#51d88a" ("7z" "zip" "bz2" "tgz" "txz" "gz" "xz" "z" "Z" "jar" "war" "ear" "rar" "sar" "xpi" "apk" "xz" "tar" "whl" "pt" "pth"))
-    (dired-rainbow-define packaged    "#faad63" ("deb" "rpm" "apk" "jad" "jar" "cab" "pak" "pk3" "vdf" "vpk" "bsp"))
-    (dired-rainbow-define encrypted   "#ffed4a" ("gpg" "pgp" "asc" "bfe" "enc" "signature" "sig" "p12" "pem"))
-    (dired-rainbow-define fonts       "#6cb2eb" ("afm" "fon" "fnt" "pfb" "pfm" "ttf" "otf"))
-    (dired-rainbow-define partition   "#e3342f" ("dmg" "iso" "bin" "nrg" "qcow" "toast" "vcd" "vmdk" "bak"))
-    (dired-rainbow-define vc          "#0074d9" ("git" "gitignore" "gitattributes" "gitmodules"))
-    (dired-rainbow-define-chmod executable-unix "#38c172" "-.*x.*"))
-
-  (use-package dired-narrow
-    :after    dired
-    :bind (:map dired-mode-map
-                ("\\" . dired-narrow)
-                ("<down>"  . dired-narrow-next-file)
-                ("<up>"    . dired-narrow-previous-file)
-                ("<right>" . dired-narrow-enter-directory)))
-  (use-package dired-collapse
-    :hook 'dired-mode-hook)
-  ;;preview files in dired
-  (use-package peep-dired
-  :after dired
-    :bind (:map dired-mode-map
-                ("P" . peep-dired))
-    :config (setq peep-dired-ignored-extensions '("mkv" "iso" "mp4"))
-    (setq peep-dired-cleanup-on-disable t))
+      :bind (:map dired-mode-map
+                  ("P" . peep-dired))
+      :config (setq peep-dired-ignored-extensions '("mkv" "iso" "mp4"))
+      (setq peep-dired-cleanup-on-disable t))
 #+end_src
 
 ** screenshot
