--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-projectile.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-projectile.org
@@ -20,29 +20,29 @@
 
   (pretty-hydra-define hydra-projectile (:title "Projectile" :quit-key "<XF86Launch8>")
     ("Open"
-     (("f"   counsel-projectile-find-file-dwim "find file")
-      ("z"   counsel-projectile-switch-to-buffer "switch buffer")
-      ("w"   counsel-projectile-switch-project "switch project")
-      ("v"   projectile-run-vterm-other-window "vterm in project")
-      ("d"   dired-open-other-window "dired in project"))
+     (("f"   counsel-projectile-find-file-dwim "Find project file")
+      ("z"   counsel-projectile-switch-to-buffer "Switch to project buffer")
+      ("w"   counsel-projectile-switch-project "Switch project")
+      ("v"   projectile-run-vterm-other-window "Vterm in project")
+      ("d"   dired-open-other-window "Dired in project"))
 
     "Search"
     (("a"   counsel-projectile-rg "rg in project")
      ("A" counsel-rg "rg")
-     ("o"   projectile-multi-occur "occur in project")
+     ("o"   projectile-multi-occur "Occur in project")
      ("g"   counsel-projectile-git-grep "git grep")
      ("r" counsel-fzf "fzf")
      )
 
     "Buffers"
-    (("k"   projectile-kill-buffers "kill project")
+    (("k"   projectile-kill-buffers "Kill project")
      ("h" magit-log-buffer-file "git file log")
      ("i" (ibuffer t nil nil t) "ibuffer"))
 
     "Projectile"
-    (("C"   projectile-invalidate-cache "rebuild cache")
-     ("x"   projectile-remove-known-project "remove projects")
-     ("X"   projectile-cleanup-known-projects "cleanup"))
+    (("C"   projectile-invalidate-cache "Rebuild cache")
+     ("x"   projectile-remove-known-project "Remove projects")
+     ("X"   projectile-cleanup-known-projects "Cleanup"))
     )
   )
 
